5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1594_1806.log
== TEST (2019-04-02 15:13:08) 
-- CODE:
from math import*

n=input("insira o numero de pessoas:")

p= 1 - factorial(365)/factorial(365-n) * 1/(365**n)
print(round(p,2)
-- ERROR:
File "XXXX", line 7
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:13:13) 
-- CODE:
from math import*

n=input("insira o numero de pessoas:")

p= 1 - factorial(365)/factorial(365-n) * 1/(365**n)
print(round(p,2)()
-- ERROR:
File "XXXX", line 7
    
                      ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:13:27) 
-- CODE:
from math import*

n=input("insira o numero de pessoas:")

p= 1 - factorial(365)/factorial(365-n) * 1/(365**n)
print(round(p,2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    p= 1 - factorial(365)/factorial(365-n) * 1/(365**n)
TypeError: unsupported operand type(s) for -: 'int' and 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:13:56) 
-- CODE:
from math import*

n=float(input("insira o numero de pessoas:"))

p= 1 - factorial(365)/factorial(365-n) * 1/(365**n)
print(round(p,2))
-- OUTPUT:
0.17
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 15:14:21) 
-- CODE:
from math import*

n=float(input("insira o numero de pessoas:"))

p= 1 - factorial(365)/factorial(365-n) * 1/(365**n)
t= p *100
print(round(t,2))
-- OUTPUT:
16.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 15:14:25) 
-- CODE:
from math import*

n=float(input("insira o numero de pessoas:"))

p= 1 - factorial(365)/factorial(365-n) * 1/(365**n)
t= p *100
print(round(t,2))
-- EXECUTION TIME:
0.14852
-- TEST CASE 1:
---- input:
12
---- correct output:
16.7
---- user output:
16.7
-- TEST CASE 2:
---- input:
24
---- correct output:
53.83
---- user output:
53.83
-- TEST CASE 3:
---- input:
99
---- correct output:
100.0
---- user output:
100.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
